[gd_scene load_steps=9 format=3 uid="uid://dmne5rhxiuvef"]

[ext_resource type="Script" path="res://Torres/torre_pie/torre_pie.gd" id="1_7bc3h"]
[ext_resource type="Texture2D" uid="uid://u52rotimyvw7" path="res://Torres/torre_pie/Cream pie Tower.png" id="2_ejgn4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpl1h"]
atlas = ExtResource("2_ejgn4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h26my"]
atlas = ExtResource("2_ejgn4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3tkk"]
atlas = ExtResource("2_ejgn4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iedra"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpl1h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h26my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3tkk")
}],
"loop": true,
"name": &"jogar",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmlyk"]
size = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_tg3my"]
radius = 200.105

[node name="torre_pie" type="StaticBody2D"]
script = ExtResource("1_7bc3h")
energia = -15.0
custo_base = 30
vida_maxima = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -4)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_iedra")
animation = &"jogar"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_vmlyk")

[node name="torre" type="Area2D" parent="."]
position = Vector2(40, 20)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="torre"]
position = Vector2(-38, -20)
shape = SubResource("CircleShape2D_tg3my")

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(1, -32)

[node name="PieContainer" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Ponto Popup Dano" type="Marker2D" parent="."]
position = Vector2(0, -24)

[connection signal="body_entered" from="torre" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="torre" to="." method="_on_tower_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
